# vulkan-wgpu-playground

./: Cargo.toml  README.md
render/: Cargo.toml
render/src/: lib.rs  render_pipeline.rs  window.rs
render/src/camera/: camera_state.rs  controller.rs  mod.rs  update_camera.rs
render/src/instance/: mod.rs  state.rs
render/src/movement/: mod.rs  update_movement.rs
render/src/swapchain/: mod.rs
render/src/swapchain/bind_grp_layouts/: mod.rs
render/src/swapchain/render_pipelines/: mod.rs  pipeline_state.rs
render/src/texture/: mod.rs
render/src/triangle/: draw_triangle.rs  mod.rs  vertex.rs
res/: Gear1.mtl  harold.mtl
shaders/: shader.wgsl
src/: camera.rs  camera_controller.rs  challenge.wgsl  instance.rs  main.rs  model.rs  resources.rs  shader.wgsl  surface.rs  swapchain.rs  test.rs  texture.rs  triangle.rs  triangle_model.rs  vertex_buffer.rs  window.rs
src/component/: mod.rs
src/component/camera/: camera_controller.rs  camera_state.rs  mod.rs
src/component/instance/: instance_raw.rs  mod.rs
src/component/light/: light_uniform.rs  mod.rs
src/component/model/: draw_light.rs  draw_model.rs  mod.rs  model.rs
src/component/swapchain/: bind_group_layouts.rs  light.wgsl  mod.rs  render_pipeline.rs  shader.wgsl
src/component/texture/: mod.rs
src/component/triangle/: draw_triangle.rs  mod.rs
src/component/window/: mod.rs
src/texture/: mod.rs
