[package]
name = "hello_wgpu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "*"
winit = "*"
env_logger = "*"
log = "*"
wgpu = "*"
pollster = "*"
bytemuck = { version = "1.12", features = [ "derive" ] }
anyhow = "*"
fs_extra = "1.2"
glob = "0.3"
cgmath = "0.18"
tobj = { version = "3.2.1", features = [
    "async",
]}


[dependencies.image]
version = "*"
default-features = true
features = ["png", "jpeg"]
