[package]
name = "render"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "*"
wgpu = "*"
bytemuck = { version = "1.12", features = [ "derive" ] }
cgmath = "0.18"

[dependencies.image]
version = "*"
default-features = true
features = ["png", "jpeg"]
